terraform/modules/eks-2/main.tf
provider "random" {
  version = "~> 2.1"
}


provider "template" {
  version = "~> 2.1"
}



provider "kubernetes" {
  host                   = data.aws_eks_cluster.cluster.endpoint
  cluster_ca_certificate = base64decode(data.aws_eks_cluster.cluster.certificate_authority.0.data)
  token                  = data.aws_eks_cluster_auth.cluster.token
  load_config_file       = false
  version                = "~> 1.11"
}

//data "aws_availability_zones" "available" {
//}



resource "aws_security_group" "worker_group_mgmt_one" {

  name_prefix = "worker_group_mgmt_one"
  vpc_id      = var.eks_vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
    ]
  }
}

resource "aws_security_group" "worker_group_mgmt_two" {

  name_prefix = "worker_group_mgmt_two"
  vpc_id      = var.eks_vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "192.168.0.0/16",
    ]
  }
}

resource "aws_security_group" "all_worker_mgmt" {

  name_prefix = "all_worker_management"
  vpc_id      = var.eks_vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = [
      "10.0.0.0/8",
      "172.16.0.0/12",
      "192.168.0.0/16",
    ]
  }
}
